@@ -3,6 +3,9 @@ Changelog for Processeditor
 
 Todo: Work on #40 (Server: Implement EmumerationDialogEditor)
 
+2019-02-17
+* Added support for SSL config via www/config/ssl_config.properties
+
 2018-06-16
 * Added constants for JSONExporter fields
 
